option java_outer_classname = "LCControlType";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.common";

enum ControlType{
	oil = 0;
	circuit = 1;
}